--- a/code (3).html
+++ b/code (3).html
@@ -9,10 +9,10 @@
 <body>
     <div class="container">
         <h1>I'm So Sorry</h1>
-        <p>Dear [Girlfriend's Name],</p>
+        <p>Dear [Annuuuu 🎀],</p>
         <p>I messed up, and I feel terrible about it. You mean the world to me, and I promise to do better. Please forgive me?</p>
         <p>With all my love,</p>
-        <p>[Your Name]</p>
+        <p>[apkaaa RISHUU ☺️]</p>
         <button id="forgiveBtn">Forgive Me?</button>
         <div id="message" style="display: none;">Thank you! I love you more than words can say. 💖</div>
     </div>
