--- a/code (5).html
+++ b/code (5).html
@@ -109,9 +109,9 @@
         <div class="flower" style="left: 90%; animation-delay: 8s;">🌷</div>
     </div>
     <div class="card">
-        <h1>I'm So Sorry, [Girlfriend's Name]</h1>
+        <h1>I'm So Sorry, [Annuuu 🎀]</h1>
         <p>I messed up, and my heart aches knowing I hurt you. You are my everything, and I promise to cherish you more every day. Please forgive me?</p>
-        <p>With all my love, [Your Name]</p>
+        <p>With all my love, [Rishuu]</p>
         
         <button class="surprise-btn" onclick="revealSurprise()">Click for Your Anniversary Surprise! 🎉</button>
         
